# opencode-config

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  opencode.json  template.json
.github/workflows/: ci.yml  pages.yml
example-config/: example.json  model-configs.yaml
examples/: README.md  model-configs.yaml
examples/template.d/: default.json
pages/: book.toml
pages/src/: SUMMARY.md  introduction.md
pages/src/absurd/: autonom.md  build.md  checker.md  coder.md  debug.md  doc.md  expert.md  explore.md  general.md  git.md  interactive.md  json-yaml-coder.md  overview.md  plan.md  research.md  review.md  security.md  shell-coder.md  technical-writer.md  test.md  title.md  ux.md  wp-manager.md
pages/src/prompt-engineering/: anti-patterns.md  compression.md  core-principles.md  multi-agent.md  techniques.md
src/: cli.rs  completions.rs  compose.rs  config.rs  create.rs  create_builder.rs  decompose.rs  diff.rs  env_resolve.rs  lib.rs  main.rs  mapping.rs  options.rs  palette_io.rs  render.rs  render_builder.rs  schema.rs  substitute.rs  template.rs  validate.rs  wizard.rs  wizard_builder.rs
tests/: integration_cli.rs  integration_completions.rs  integration_compose.rs  integration_create.rs  integration_decompose.rs  integration_examples.rs  integration_list.rs  integration_merge_behavior.rs  integration_nonstring_substitution.rs  integration_palette_io.rs  integration_render.rs  integration_strict.rs  integration_template_resolution.rs  integration_tracing.rs  integration_validate.rs  integration_yaml_templates.rs  switch_integration.rs
tests/fixtures/: mapping-custom.yaml  mapping-default.yaml  monolithic-agents.json  monolithic-small.json
tests/fixtures/conflicting-fragments/: 01-base.json  02-conflict.json
tests/fixtures/fragments/: 01-base.json  (+2 more)
tests/ui/: skip-substitution.rs  skip-substitution.stderr
